feat: 식단의 음식명 리스트 조회하는 서비스 메서드 추가